# GrimaldiSalmoiraghiZhu

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  benchmark_results.csv  build.sh  catch2_cheatsheet.md  ingestor  listener.sh  requirements.txt  script.sh  submit_job.sh
.github/workflows/: automated_CD.yml  automated_CI.yml  security_scan.yml
Configuration_files/: titlepage.tex
collector_output/: raw_data_1777721421_0001.txt  raw_data_1777721425_0002.txt  raw_data_1777721429_0003.txt  raw_data_1777721433_0004.txt
docs/: main.tex
docs/Configuration_files/: json_lstlisting.tex
galileo_scripts/: ISTRUCTIONS.md  poll_and_deploy.sh  poller.slurm
input/: export_sat_alpha_small.csv  rules.json
output/: valid_data.csv
singularity/: Singularity.def  job.slurm
src/: AstraLog.cpp  AstraLog.h  Ingestor.cpp  Ingestor.h  astralog_collector.py  count_invalid_format_data.py  main.cpp
src/components/: BatchAccumulator.cpp  BatchAccumulator.h  DataIngestor.cpp  DataIngestor.h  InvalidPacketsFilter.h  MeasDatabase.cpp  MeasDatabase.h  MpiRuleEngine.cpp  MpiRuleEngine.h  OutputDispatcher.cpp  OutputDispatcher.h  RuleEngine.cpp  RuleEngine.h  RuleLoader.cpp  RuleLoader.h  ThreadSafeBuffer.h
src/components/data_ingestor/: CsvDataIngestor.cpp  CsvDataIngestor.h  DataIngestor.cpp  DataIngestor.h  JsonDataIngestor.cpp  JsonDataIngestor.h
src/deprecated/: BatchFile.h  DataIngestor.cpp  DataIngestor.h  Ingestor.h  InvalidPacketsFilter.h  InvalidPacketsFilterInterface.h  main.cpp
src/interfaces/: BatchAccumulatorInterface.h  BatchProviderInterface.h  ConsumerBuffer.h  InvalidPacketsFilterInterface.h  MeasDatabaseInterface.h  OutputDispatcherInterface.h  ProducerBuffer.h  RuleEngineInterface.h  RuleLoaderInterface.h
src/types/: BatchFile.h  TelemetryBatch.h
src/types/rules/: BaseRule.h  LogicalCorrelationRule.cpp  LogicalCorrelationRule.h  LogicalCorrelationRule.hpp  SimpleRule.cpp  SimpleRule.h  StatefulRule.cpp  StatefulRule.h  StatefulRule.hpp  StepDifferenceRule.cpp  StepDifferenceRule.h
tests/: test_RuleLoader.cpp  test_astralog.cpp  test_collector.py  test_logical_correlation_rule.cpp  test_parallelization.cpp  test_simple_rule.cpp  test_simple_rule_main.cpp  test_stateful_rule.cpp
tests/components/: test_OutputDispatcher.cpp  test_RuleLoader.cpp  test_ThreadSafeBuffer.cpp  test_batch_accumulator.cpp  test_data_ingestor.cpp  test_rule_engine.cpp
tests/deprecated/: .gitlab-ci.yml  test_logical_correlation_rule.cpp  test_simple_rule_main.cpp  test_simple_rule_main_catch2.cpp  test_step_difference_rule_main.cpp
tests/integrations/: test_integration.cpp
tests/test_collector_output/: raw_data_1777721417_0000.txt
tests/types/: test_TelemetryBatch.cpp  test_logical_correlation_rule.cpp  test_simple_rule.cpp  test_stateful_rule.cpp  test_step_difference_rule.cpp
